clusters/jellybuntu/media/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.elysium.industries`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.elysium.industries`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.elysium.industries`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.elysium.industries`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseerr.elysium.industries`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.elysium.industries`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`navidrome.elysium.industries`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: byparr
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`byparr.elysium.industries`)
      kind: Rule
      services:
        - name: byparr
          port: 8191
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.elysium.industries`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.elysium.industries`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
